WIP for JCB5 'otherlang' chapter